# plow

./: .gitignore  Cargo.toml  LICENSE-MIT  MAINTAINING.md  README.md  justfile
.github/workflows/: ci.yml  ci_macos_test.yml  release.yml
data/: .gitignore
data/example_ontologies/: core_change_tracking.ttl
data/example_ontologies/simple_hierarchy/: bottom_level.ttl  mid_level.ttl  top_level.ttl
data/example_ontologies/software_development/: software_development.ttl
data/example_registries/simple_hierarchy_with_ns/artifacts/: bottomLevel_0_0_1  midLevel_0_0_1  topLevel_0_0_1
data/example_registries/simple_hierarchy_with_ns/index/@namespace/: bottom_level.json  mid_level.json  top_level.json
plow_backend_reference/: Cargo.toml
plow_backend_reference/src/: api.rs  env.rs  lib.rs  main.rs  middlewares.rs
plow_backend_reference/src/api/: v1.rs  version.rs
plow_backend_reference/src/api/v1/: artifact.rs  field.rs  response.rs  token.rs  user.rs
plow_backend_reference/src/api/v1/field/: types.rs
plow_backend_reference/src/api/v1/response/: types.rs
plow_backend_reference/src/api/v1/token/: types.rs
plow_backend_reference/src/middlewares/: cors.rs  logger.rs  security_headers.rs
plow_cli/: CHANGELOG.md  Cargo.toml
plow_cli/src/: config.rs  error.rs  feedback.rs  field.rs  field_id.rs  git.rs  init.rs  lib.rs  lint.rs  lock.rs  login.rs  main.rs  manifest.rs  registry.rs  resolve.rs  source.rs  subcommand.rs  submit.rs  sync.rs  util.rs  utils.rs  workspace.rs
plow_cli/src/config/: files.rs
plow_cli/src/config/files/: credentials.rs  workspace_config.rs  workspace_manifest.rs
plow_cli/src/error/: config.rs  field_access.rs  field_download.rs  field_init.rs  index_sync.rs  lint.rs  list.rs  login.rs  protege.rs  resolve.rs  submission.rs  workspace_init.rs
plow_cli/src/manifest/: macros.rs  utils.rs
plow_cli/src/registry/: dependency.rs  version.rs
plow_cli/src/source/: source_id.rs
plow_cli/src/subcommand/: init.rs  lint.rs  list.rs  login.rs  protege.rs  submit.rs  update.rs
plow_cli/src/subcommand/init/: field.rs  utils.rs  workspace.rs
plow_cli/src/subcommand/init/workspace/: fields.rs  manifest.rs
plow_cli/src/subcommand/list/: response.rs
plow_cli/src/submit/: response.rs
plow_cli/src/utils/: url.rs
plow_cli/src/workspace/: fields.rs
plow_cli/tests/: tests.rs
plow_cli/tests/snapshots/: tests__plow_init_field_empty_dir.snap
plow_graphify/: CHANGELOG.md  Cargo.toml
plow_graphify/src/: lib.rs
plow_gui/: Cargo.toml  README.md
plow_gui/src/: config_view.rs  file_watcher.rs  homepage_view.rs  initialize_ontology_view.rs  lint_single_file_view.rs  main.rs  style.rs
plow_linter/: CHANGELOG.md  Cargo.toml
plow_linter/src/: lib.rs  lint.rs  lints.rs
plow_linter/src/lint/: common_error_literals.rs  helpers.rs
plow_linter/src/lints/: base_matches_root_prefix.rs  contains_owl_prefixes.rs  contains_registry_prefix.rs  exists_registry_license.rs  exists_registry_license_spdx.rs  has_at_least_one_valid_license_annotation.rs  has_canonical_prefix.rs  has_ontology_declaration.rs  has_ontology_format_version.rs  has_rdfs_comment_manifest_context.rs  has_rdfs_label_manifest_context.rs  has_registry_author.rs  has_registry_category.rs  has_registry_keyword.rs  has_registry_license.rs  has_registry_license_spdx.rs  has_registry_package_name.rs  has_registry_package_version.rs  has_registry_short_description.rs  root_prefix_matches_pattern.rs  valid_rdfs_labels.rs  valid_registry_dependencies.rs  valid_registry_documentation.rs  valid_registry_homepage.rs  valid_registry_repository.rs
plow_linter/tests/: linst_has_registry_short_description.rs  lint_has_at_least_one_valid_license_annotation.rs  lint_has_rdfs_comment_manifest_context.rs  lint_has_rdfs_label_manifest_context.rs  lint_has_registry_author.rs  lint_has_registry_category.rs  lint_has_registry_keyword.rs  lint_has_registry_license.rs  lint_has_registry_license_spdx.rs  lint_has_registry_package_name.rs  lint_has_registry_package_version.rs  lint_has_registry_short_description.rs  lint_valid_rdfs_labels.rs  lint_valid_registry_dependencies.rs  lint_valid_registry_documentation.rs  lint_valid_registry_homepage.rs  lint_valid_registry_repository.rs
plow_linter/tests/data/: default_ttl_header
plow_ontology/: CHANGELOG.md  Cargo.toml
plow_ontology/src/: constants.rs  lib.rs
plow_ontology/tests/: initialize.rs
plow_package_management/: CHANGELOG.md  Cargo.toml
plow_package_management/src/: edit.rs  lib.rs  lock.rs  metadata.rs  package.rs  registry.rs  resolve.rs  version.rs  workspace.rs
plow_package_management/src/registry/: in_memory.rs  index.rs  on_disk.rs  on_disk_git.rs
plow_package_management/src/resolve/: dependency.rs  error.rs
plow_package_management/tests/: common.rs  lock.rs  metadata.rs  registry.rs  resolve.rs  version.rs
