[workspace]
members = [
  "plow_cli",
#  "plow_gui",
  "plow_linter",
  "plow_package_management",
  "plow_graphify",
  "plow_ontology",

  "plow_backend_reference"
]

[workspace.dependencies]
plow_graphify = { version = "0.2.3", path = "./plow_graphify" }
plow_linter = { version = "0.2.9", path = "./plow_linter" }
plow_ontology = { version = "0.2.2", path = "./plow_ontology" }
plow_package_management = { version = "0.3.4", path = "./plow_package_management" }

[workspace.metadata.release]
push = false
