[workspace]
members = [
  "plow_cli",
#  "plow_gui",
  "plow_linter",
  "plow_package_management",
  "plow_graphify",
  "plow_ontology",

#  "plow_backend_reference"
]

[workspace.dependencies]
plow_graphify = { version = "0.2.3", path = "./plow_graphify" }
plow_linter = { version = "0.2.9", path = "./plow_linter" }
plow_ontology = { version = "0.2.2", path = "./plow_ontology" }
plow_package_management = { version = "0.3.4", path = "./plow_package_management" }

[workspace.metadata.release]
push = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
# TODO: macOS: fix openSSL build issues; Windows: Set up CI test before releasing
#  "x86_64-apple-darwin",
#  "x86_64-pc-windows-msvc",
#  "aarch64-apple-darwin"
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
