[package]
name = "plow_backend_reference"
description = "The main registry service for Plow Registry."
version = "0.1.0"
authors = ["Ali Somay <ali@field33.com>"]
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.31"
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
env_logger = "0.9"
actix-cors = "0.6"
derive_more = "0.99"
reqwest = { version = "0.11", features = ["json", "stream"] }
actix-http = "3"
futures = "0.3"
futures-util = "0.3"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.13"
hex = "0.4"
tokio = "1.18"
dotenv = "0.15"
spdx = "0.8"
dirs = "4"
rand = "0.8"
async-recursion = "1.0.0"
lazy_static = "1.4.0"
harriet = "0.1"
toml = "0.5.8"

[dependencies.sea-orm]
version = "^0.8"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-sqlite",
]

[dev-dependencies]
url = "2"
fs_extra = "1"
dotenv = "0.15"



