[package]
name = "plow_cli"
description = "Plow package management command line applications."
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
keywords = ["plow", "package_management", "cli"]
repository = "https://github.com/field33/plow/"
edition = "2021"
categories = ["command-line-utilities"]

[[bin]]
name = "plow"
path = "src/main.rs"

[dependencies]
dialoguer = "0.10"
clap = "3"
nom = "7"
harriet = "0.1"
anyhow = { version = "1", features = ["backtrace"] }
dirs = "4"
camino = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "multipart"]}
colored = "2"
plow_package_management = { git = "https://github.com/field33/plow", branch = "minor-updates-to-plow-tools" }
plow_linter = { git = "https://github.com/field33/plow", branch = "minor-updates-to-plow-tools" }
plow_ontology = "0.1"