[package]
name = "plow_cli"
description = "Plow package management command line applications."
version = "0.3.3"
license = "MIT OR Apache-2.0"
authors = ["Ali Somay <ali@field33.com>"]
keywords = ["plow", "package_management", "cli"]
repository = "https://github.com/field33/plow/"
edition = "2021"
categories = ["command-line-utilities"]

[[bin]]
name = "plow"
path = "src/main.rs"

[dependencies]
dialoguer = "0.10"
clap = "3"
nom = "7"
harriet = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
dirs = "4"
camino = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"]}
colored = "2"
plow_package_management = "0.3"
plow_linter = "0.2"
plow_ontology = "0.2"
thiserror = "1"
fallible-iterator = "0.2"
sha2 = "0.10"
rayon = "1"
git2 = "0.14" 
chrono = "0.4"
memchr = "2"
lazy_static = "1"
regex = "1"
uuid = "1"
itertools = "0.10"
fs_extra = "1"