[package]
name = "plow_cli"
description = "Plow package management command line applications."
version = "0.5.2"
license = "MIT OR Apache-2.0"
authors = ["Ali Somay <ali@field33.com>"]
keywords = ["plow", "package_management", "cli"]
repository = "https://github.com/field33/plow/"
edition = "2021"
categories = ["command-line-utilities"]

[[bin]]
name = "plow"
path = "src/main.rs"

[dependencies]
plow_package_management = { workspace = true }
plow_linter = { workspace = true }
plow_ontology = { workspace = true }

dialoguer = "0.10"
clap = "3"
nom = "7"
harriet = "0.3.1"
anyhow = { version = "1", features = ["backtrace"] }
dirs = "4"
camino = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"]}
colored = "2"
thiserror = "1"
fallible-iterator = "0.2"
sha2 = "0.10"
rayon = "1"
git2 = { version = "0.14", features = ["vendored-libgit2", "vendored-openssl"] }
chrono = "0.4"
memchr = "2"
lazy_static = "1"
regex = "1"
uuid = "1"
itertools = "0.10"
fs_extra = "1"
which = "4"
open = "3"
base64 = "0.13"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
# Works best with cargo-insta command
insta = { version = "1.31.0", features = ["yaml"] }
