[package]
name = "plow_graphify"
description = "Plow utility library: A tool which transforms a ttl document to a graph which is more convenient to work with."
version = "0.2.2"
license = "MIT OR Apache-2.0"
keywords = ["plow", "rdf", "owl", "ttl", "turtle"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[dependencies]
thiserror = "1"
harriet = "0.2"
field33_rdftk_core_temporary_fork = "0.3"
field33_rdftk_iri_temporary_fork = "0.1"
