[package]
name = "plow_linter"
description = "A linter to lint Plow ttl documents (interpreted as ontologies)."
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[dependencies]
plow_ontology = { path = "../plow_ontology", version = "0.1.0" }
plow_graphify = { path = "../plow_graphify", version = "0.1.0" }
plow_package_management = { path = "../plow_package_management", version = "0.1.0" }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
harriet = "0.1"
nom = "7"
regex = "1"
rdftk_core = "0.3"
rdftk_iri = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tempdir = "0.3"
aquamarine = "0.1"
email_address = "0.2"

