[package]
name = "plow_linter"
description = "A linter to lint Plow ttl documents (interpreted as ontologies)."
version = "0.2.4"
license = "MIT OR Apache-2.0"
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[dependencies]
plow_ontology = "0.2"
plow_graphify = "0.2"
plow_package_management =  "0.2"
anyhow = { version = "1.0.53", features = ["backtrace"] }
thiserror = "1"
harriet = "0.2"
nom = "7"
regex = "1"
field33_rdftk_core_temporary_fork = "0.3"
field33_rdftk_iri_temporary_fork = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tempdir = "0.3"
aquamarine = "0.1"
email_address = "0.2"
rustrict = "0.5"
spdx = "0.9"
addr = "0.15"
darc = "0.0.1"
rayon = "1"
chashmap = "2"
uuid = "1"
