[package]
name = "plow_ontology"
description = "Plow utility: Anything related to ontologies."
version = "0.1.1"
license = "MIT OR Apache-2.0"
keywords = ["plow", "rdf", "owl", "ontology"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
plow_graphify = "0.1"
harriet = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
rdftk_core = "0.3"
rdftk_iri = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
plow_linter = { path = "../plow_linter" }

# [patch.crates-io]
# plow_graphify = { path = "../plow_graphify" }