[package]
name = "plow_ontology"
description = "Plow utility: Anything related to ontologies."
version = "0.2.1"
license = "MIT OR Apache-2.0"
keywords = ["plow", "rdf", "owl", "ontology"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
plow_graphify = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
field33_rdftk_core_temporary_fork = "0.3"
field33_rdftk_iri_temporary_fork = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
plow_linter = "0.2"

