[package]
name = "plow_ontology"
description = "Plow utility: Anything related to ontologies."
version = "0.2.2"
license = "MIT OR Apache-2.0"
keywords = ["plow", "rdf", "owl", "ontology"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }