[package]
name = "plow_package_management"
description = "Plow: A package manager for ontologies."
version = "0.2.2"
license = "MIT OR Apache-2.0"
keywords = ["plow", "package_management", "pubgrub"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[dependencies]
plow_ontology = "0.2"
plow_graphify = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
harriet = "0.2"
rdftk_core = "0.3"
rdftk_iri = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
glob = "0.3"
git2 = "0.14"
dirs = "4"
pubgrub = "0.2"
semver = "1"
itertools = "0.10"
fallible-iterator = "0.2"
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"
plow_linter = { path = "../plow_linter" }
plow_ontology = "0.2"
pubgrub = "0.2"
semver = "1"


