[package]
name = "plow_package_management"
description = "Plow: A package manager for ontologies."
version = "0.3.4"
license = "MIT OR Apache-2.0"
keywords = ["plow", "package_management", "pubgrub"]
authors = ["Maximilian Goisser <max@field33.com>", "Ali Somay <ali@field33.com>"]
repository = "https://github.com/field33/plow/"
edition = "2021"

[dependencies]
plow_ontology = { workspace = true }
plow_graphify = { workspace = true }

anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
harriet = "0.3.1"
field33_rdftk_core_temporary_fork = "0.3"
field33_rdftk_iri_temporary_fork = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
glob = "0.3"
git2 = "0.14"
dirs = "4"
pubgrub = "0.2"
semver = "1"
itertools = "0.10"
fallible-iterator = "0.2"
toml = "0.5"
camino = "1"

[dev-dependencies]
plow_ontology = { workspace = true }

tempdir = "0.3"
pubgrub = "0.2"
semver = "1"


